force-app/main/default/objects/Rate__c/Rate__c.object-meta.xml
<CustomObject>
    <description>Pricing within a plan specific to a TDSP</description>
    <label>Rate</label>
    <nameField>
        <label>Rate ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>