force-app/main/default/objects/Rate__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this rate currently active?</description>
    <inlineHelpText>Is this rate currently active?</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>