force-app/main/default/objects/Rate__c/fields/Advertised_Rate__c.field-meta.xml
<CustomField>
    <fullName>Advertised_Rate__c</fullName>
    <description>The current advertised rate for this plan. 1,000 kWh for Residential, 1,500 kWh for Small-Commercial.</description>
    <inlineHelpText>The current advertised rate for this plan. 1,000 kWh for Residential, 1,500 kWh for Small-Commercial.</inlineHelpText>
    <label>Advertised Rate (cents)</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>