force-app/main/default/objects/Rate__c/fields/Advertised_Rate_Formula__c.field-meta.xml
<CustomField>
    <fullName>Advertised_Rate_Formula__c</fullName>
    <formula>IF(
OR( Record_Type_Name__c = &quot;Residential&quot;,Record_Type_Name__c = &quot;Residential TOU&quot;), 
 X1000_kWh_rate__c ,
IF(
Record_Type_Name__c = &quot;Commercial&quot;, 
non_demand_1500_kWh_rate_cents__c,
Null

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advertised Rate (cents)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>