force-app/main/default/objects/Rate__c/fields/All_CES_Locations__c.field-meta.xml
<CustomField>
    <fullName>All_CES_Locations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All CES Locations</label>
    <type>Checkbox</type>
</CustomField>