force-app/main/default/objects/Rate__c/fields/Allow_Swing_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Allow_Swing_Tolerance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this Rate allow a volume swing tolerance?</inlineHelpText>
    <label>Allow Swing Tolerance</label>
    <type>Checkbox</type>
</CustomField>