force-app/main/default/objects/Rate__c/fields/Alternate_Payment_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Payment_Surcharge__c</fullName>
    <description>Fee for Corporate/Business credit card payment.</description>
    <inlineHelpText>Fee for Corporate/Business credit card payment.</inlineHelpText>
    <label>Alternate Payment Surcharge</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>