force-app/main/default/objects/Rate__c/fields/Bandwidth_Swing_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Bandwidth_Swing_Allowed__c</fullName>
    <description>By what percentage do customers have to be within their historical usage to have this rate?</description>
    <inlineHelpText>By what percentage do customers have to be within their historical usage to have this rate?</inlineHelpText>
    <label>Bandwidth/Swing % Allowed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>