force-app/main/default/objects/Rate__c/fields/Base_Pricing_Default__c.field-meta.xml
<CustomField>
    <fullName>Base_Pricing_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this price type default set to base pricing?</description>
    <inlineHelpText>Is this price type default set to base pricing?</inlineHelpText>
    <label>Base Pricing Default</label>
    <type>Checkbox</type>
</CustomField>