force-app/main/default/objects/Rate__c/fields/Basis_Charge_Included__c.field-meta.xml
<CustomField>
    <fullName>Basis_Charge_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are the costs for a customer’s contribution to congestion or the costs they contribute to managing the distribution of power across the grid included in this rate?</description>
    <inlineHelpText>Are the costs for a customer’s contribution to congestion or the costs they contribute to managing the distribution of power across the grid included in this rate?</inlineHelpText>
    <label>Basis/Nodal Charge Included?</label>
    <type>Checkbox</type>
</CustomField>