force-app/main/default/objects/Rate__c/fields/Cancellation_Fee_Description__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee_Description__c</fullName>
    <description>How is the cancellation fee calculated?</description>
    <inlineHelpText>How is the cancellation fee calculated?</inlineHelpText>
    <label>Cancellation Fee Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>