force-app/main/default/objects/Rate__c/fields/Cashout_Obligation_Applies__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Obligation_Applies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cashout Obligation Applies</label>
    <type>Checkbox</type>
</CustomField>