force-app/main/default/objects/Rate__c/fields/CES_Pricing_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>CES_Pricing_Rate_Type__c</fullName>
    <formula>IF( 
   CONTAINS( Name , &#39;Guaranteed&#39; )
   , &#39;Utility&#39;
   , IF( 
        CONTAINS( Name , &#39;Market Price&#39;)
        , &#39;Market Price&#39;
        , IF( 
             CONTAINS( Name , &#39;Enhanced&#39;)
             , &#39;Utility&#39;
             , IF( 
                  CONTAINS( Name , &#39;Index&#39;)
                  , &#39;Index&#39;
                  , &#39;Fixed Price&#39;
                )
             )
        )
   )</formula>
    <label>CES Pricing Rate Type</label>
    <type>Text</type>
</CustomField>