force-app/main/default/objects/Rate__c/fields/Changed_Start_Date_Fee__c.field-meta.xml
<CustomField>
    <fullName>Changed_Start_Date_Fee__c</fullName>
    <description>Fee for each start date change.</description>
    <inlineHelpText>Fee for each start date change.</inlineHelpText>
    <label>Changed Start Date Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>