force-app/main/default/objects/Rate__c/fields/CNP_MNG_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>CNP_MNG_Pricing_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CNP MNG Pricing Type</label>
    <type>Checkbox</type>
</CustomField>