force-app/main/default/objects/Rate__c/fields/Confirmation_Code__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Code__c</fullName>
    <description>Confirmation code for this rate (Gas Choice Program).  Must be unique within the year</description>
    <externalId>true</externalId>
    <inlineHelpText>Confirmation code for this rate (Gas Choice Program).  Must be unique within the year</inlineHelpText>
    <label>Confirmation Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>