force-app/main/default/objects/Rate__c/fields/Confirmation_Code_Status__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Code_Status__c</fullName>
    <description>For choice gas codes</description>
    <inlineHelpText>For choice gas codes</inlineHelpText>
    <label>Confirmation Code Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unactivated (not sent to the utility)</fullName>
                <default>true</default>
                <label>Unactivated (not sent to the utility)</label>
            </value>
            <value>
                <fullName>Pending activation (sent to the utility)</fullName>
            </value>
            <value>
                <fullName>Activated, not priced</fullName>
            </value>
            <value>
                <fullName>Activated with pricing</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Unactivated with order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>