force-app/main/default/objects/Rate__c/fields/Confirmation_Code_Year__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Code_Year__c</fullName>
    <description>What year the confirmation code is valid for</description>
    <inlineHelpText>What year the confirmation code is valid for</inlineHelpText>
    <label>Confirmation Code Year</label>
    <length>5</length>
    <type>Text</type>
</CustomField>