force-app/main/default/objects/Rate__c/fields/Contract_MDQ_Required__c.field-meta.xml
<CustomField>
    <fullName>Contract_MDQ_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this price type require its associated contracts&#39; MDQ to be populated?</description>
    <inlineHelpText>Does this price type require its associated contracts&#39; MDQ to be populated?</inlineHelpText>
    <label>Contract MDQ Required</label>
    <type>Checkbox</type>
</CustomField>