force-app/main/default/objects/Rate__c/fields/Contract_Volume_Required__c.field-meta.xml
<CustomField>
    <fullName>Contract_Volume_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Volume Required</label>
    <type>Checkbox</type>
</CustomField>