force-app/main/default/objects/Rate__c/fields/Daily_Base_Charge__c.field-meta.xml
<CustomField>
    <fullName>Daily_Base_Charge__c</fullName>
    <description>Daily fixed base customer charge</description>
    <inlineHelpText>Daily fixed base customer charge</inlineHelpText>
    <label>Daily Base Charge</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>