force-app/main/default/objects/Rate__c/fields/Default_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This code is used for default pricing and is not available for dynamic pricing.</description>
    <inlineHelpText>This code is used for default pricing and is not available for dynamic pricing.</inlineHelpText>
    <label>Default Code</label>
    <type>Checkbox</type>
</CustomField>