force-app/main/default/objects/Rate__c/fields/Demand_2500_kWh_rate_cents__c.field-meta.xml
<CustomField>
    <fullName>Demand_2500_kWh_rate_cents__c</fullName>
    <description>Average pricing in cents based on monthly usage of 2500 kWh for demand meters. For commercial rate use.</description>
    <inlineHelpText>Average pricing in cents based on monthly usage of 2500 kWh for demand meters. For commercial rate use.</inlineHelpText>
    <label>Demand 2500 kWh rate (cents)</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>