force-app/main/default/objects/Rate__c/fields/Disconnect_Fee__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Fee__c</fullName>
    <description>REP assessed standard disconnection processing fee</description>
    <inlineHelpText>REP assessed standard disconnection processing fee</inlineHelpText>
    <label>Disconnect Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>