force-app/main/default/objects/Rate__c/fields/Disconnection_Notice_Fee__c.field-meta.xml
<CustomField>
    <fullName>Disconnection_Notice_Fee__c</fullName>
    <description>Fee for processing an electric service disconnection transaction.</description>
    <inlineHelpText>Fee for processing an electric service disconnection transaction.</inlineHelpText>
    <label>Disconnection Notice Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>