force-app/main/default/objects/Rate__c/fields/Discontinue_Online_Service_cents__c.field-meta.xml
<CustomField>
    <fullName>Discontinue_Online_Service_cents__c</fullName>
    <description>Per kWh charge for opting out of online payment (volumetric)</description>
    <inlineHelpText>Per kWh charge for opting out of online payment (volumetric)</inlineHelpText>
    <label>Discontinue Online Service (cents)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>