force-app/main/default/objects/Rate__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>The five divisions in the NE/WY Choice program</description>
    <inlineHelpText>The five divisions in the NE/WY Choice program. Default pricing in Nebraska is non-divisional per Source Gas so we allow a default option that can be viewed by customers in any part of Nebraska.</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Program__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Western</fullName>
            </value>
            <value>
                <fullName>Casper</fullName>
            </value>
            <value>
                <fullName>Gillette</fullName>
            </value>
            <value>
                <fullName>Torrington</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>