force-app/main/default/objects/Rate__c/fields/EFL_Url__c.field-meta.xml
<CustomField>
    <fullName>EFL_Url__c</fullName>
    <description>Links to the EFL related to the Rate listed.</description>
    <inlineHelpText>Links to the EFL related to the Rate listed.</inlineHelpText>
    <label>EFL Url</label>
    <type>Url</type>
</CustomField>