force-app/main/default/objects/Rate__c/fields/Energy_Base_Rate_cents__c.field-meta.xml
<CustomField>
    <fullName>Energy_Base_Rate_cents__c</fullName>
    <description>REP Base energy delivery price</description>
    <inlineHelpText>REP Base energy delivery price</inlineHelpText>
    <label>Energy Base Rate (cents)</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>