force-app/main/default/objects/Rate__c/fields/Excessive_Payments_Fee__c.field-meta.xml
<CustomField>
    <fullName>Excessive_Payments_Fee__c</fullName>
    <description>Fee for more than 5 bill payments per month.</description>
    <inlineHelpText>Fee for more than 5 bill payments per month.</inlineHelpText>
    <label>Excessive Payments Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>