force-app/main/default/objects/Rate__c/fields/Fixed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Rate__c</fullName>
    <description>Fixed Rate for Gas Choice (per therm!)</description>
    <inlineHelpText>Fixed Rate for Gas Choice (per therm!)</inlineHelpText>
    <label>Fixed Rate</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>