force-app/main/default/objects/Rate__c/fields/Fixed_Rate_As_Text_WF__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Rate_As_Text_WF__c</fullName>
    <label>Fixed Rate As Text WF</label>
    <length>10</length>
    <type>Text</type>
</CustomField>