force-app/main/default/objects/Rate__c/fields/Fixed_Rate_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Rate_Percentage__c</fullName>
    <description>What percent of the rate is comprised of the fixed rate</description>
    <inlineHelpText>What percent of the rate is comprised of the fixed rate</inlineHelpText>
    <label>Fixed Rate Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>