force-app/main/default/objects/Rate__c/fields/Fuel_Rates_Apply__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Rates_Apply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuel Rates Apply</label>
    <type>Checkbox</type>
</CustomField>