force-app/main/default/objects/Rate__c/fields/Index_Adder__c.field-meta.xml
<CustomField>
    <fullName>Index_Adder__c</fullName>
    <description>Adder for the index PER THERM (picklist selected)</description>
    <inlineHelpText>Adder for the index PER THERM (picklist selected)</inlineHelpText>
    <label>Index Adder</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>