force-app/main/default/objects/Rate__c/fields/Index_Adder_As_Text_WF__c.field-meta.xml
<CustomField>
    <fullName>Index_Adder_As_Text_WF__c</fullName>
    <label>Index Adder As Text WF</label>
    <length>10</length>
    <type>Text</type>
</CustomField>