force-app/main/default/objects/Rate__c/fields/Index_Rate_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Index_Rate_Percentage__c</fullName>
    <description>What percent of the rate is comprised of the indexed rate?</description>
    <inlineHelpText>What percent of the rate is comprised of the indexed rate?</inlineHelpText>
    <label>Index Rate Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>