force-app/main/default/objects/Rate__c/fields/Index_reference__c.field-meta.xml
<CustomField>
    <fullName>Index_reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which Index is used for the rate</description>
    <inlineHelpText>Which Index is used for the rate</inlineHelpText>
    <label>Index Reference</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Rates</relationshipLabel>
    <relationshipName>Rates</relationshipName>
    <type>Lookup</type>
</CustomField>