force-app/main/default/objects/Rate__c/fields/Insufficient_Funds_Cancelled_Checks__c.field-meta.xml
<CustomField>
    <fullName>Insufficient_Funds_Cancelled_Checks__c</fullName>
    <description>Fee for returned or cancelled checks due to unsuccessful payment</description>
    <inlineHelpText>Fee for returned or cancelled checks due to unsuccessful payment</inlineHelpText>
    <label>Insufficient Funds/Cancelled Checks</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>