force-app/main/default/objects/Rate__c/fields/Is_FOM_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>Is_FOM_Price_Type__c</fullName>
    <formula>IF(
   CONTAINS( Name , &#39;Index FOM&#39;)
   , True
   , False
  )</formula>
    <label>Is FOM Price Type</label>
    <type>Checkbox</type>
</CustomField>