force-app/main/default/objects/Rate__c/fields/Is_FOM_Price_Type_with_Fuel__c.field-meta.xml
<CustomField>
    <fullName>Is_FOM_Price_Type_with_Fuel__c</fullName>
    <formula>IF(
  AND(
    Is_FOM_Price_Type__c == true,
    Fuel_Rates_Apply__c == false
  ), true, false
)</formula>
    <label>Is FOM Price Type with Fuel</label>
    <type>Checkbox</type>
</CustomField>