force-app/main/default/objects/Rate__c/fields/Late_Payment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Late_Payment_Fee__c</fullName>
    <defaultValue>&quot;5%&quot;</defaultValue>
    <description>Fee for late bill payment, charged as a % of past due amounts.</description>
    <inlineHelpText>Fee for late bill payment, charged as a % of past due amounts.</inlineHelpText>
    <label>Late Payment Fee</label>
    <length>5</length>
    <type>Text</type>
</CustomField>