force-app/main/default/objects/Rate__c/fields/Link_for_EFL__c.field-meta.xml
<CustomField>
    <fullName>Link_for_EFL__c</fullName>
    <description>Hyperlink for your EFL.  please include http:// or https://</description>
    <inlineHelpText>Hyperlink for your EFL.  please include http:// or https://</inlineHelpText>
    <label>Link for EFL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>