force-app/main/default/objects/Rate__c/fields/Link_for_TOS__c.field-meta.xml
<CustomField>
    <fullName>Link_for_TOS__c</fullName>
    <description>Hyperlink for the Terms of Service.  Please include http:// or https://</description>
    <inlineHelpText>Hyperlink for the Terms of Service.  Please include http:// or https://</inlineHelpText>
    <label>Link for TOS</label>
    <length>200</length>
    <type>Text</type>
</CustomField>