force-app/main/default/objects/Rate__c/fields/Link_for_YRAC__c.field-meta.xml
<CustomField>
    <fullName>Link_for_YRAC__c</fullName>
    <description>Hyperlink for the Your Rights as a Customer document for this rate.  Please include http:// or https://</description>
    <inlineHelpText>Hyperlink for the Your Rights as a Customer document for this rate.  Please include http:// or https://</inlineHelpText>
    <label>Link for YRAC</label>
    <length>200</length>
    <type>Text</type>
</CustomField>