force-app/main/default/objects/Rate__c/fields/Load_Factor__c.field-meta.xml
<CustomField>
    <fullName>Load_Factor__c</fullName>
    <description>What load factor does this rate require a premise to have?</description>
    <inlineHelpText>What load factor does this rate require a premise to have?</inlineHelpText>
    <label>Load Factor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Less Than 50 KVA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>