force-app/main/default/objects/Rate__c/fields/Manual_Assistance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Manual_Assistance_Fee__c</fullName>
    <description>Fee for live billing/payment assistance</description>
    <inlineHelpText>Fee for live billing/payment assistance</inlineHelpText>
    <label>Manual Assistance Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>