force-app/main/default/objects/Rate__c/fields/Maximum_Annual_Usage__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Annual_Usage__c</fullName>
    <description>How much yearly kWh usage is allowed for a customer to have this rate.</description>
    <inlineHelpText>How much yearly kWh usage is allowed for a customer to have this rate.</inlineHelpText>
    <label>Maximum Annual Usage (kWh)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>