force-app/main/default/objects/Rate__c/fields/Minimum_Annual_Usage__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Annual_Usage__c</fullName>
    <description>How much yearly kWh usage is required for a customer to have this rate?</description>
    <inlineHelpText>How much yearly kWh usage is required for a customer to have this rate?</inlineHelpText>
    <label>Minimum Annual Usage (kWh)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>