force-app/main/default/objects/Rate__c/fields/Minimum_Usage_Charge3__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Usage_Charge3__c</fullName>
    <label>Minimum Usage Charge 3</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>