force-app/main/default/objects/Rate__c/fields/Minimum_Usage_Charge__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Usage_Charge__c</fullName>
    <description>Minimum usage customer charge</description>
    <inlineHelpText>Minimum usage customer charge</inlineHelpText>
    <label>Minimum Usage Charge</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>