force-app/main/default/objects/Rate__c/fields/Minimum_Usage_Charge_Threshold3__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Usage_Charge_Threshold3__c</fullName>
    <label>Minimum Usage Charge Threshold 3 (kWh)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>