force-app/main/default/objects/Rate__c/fields/Minimum_Usage_Charge_Threshold_kWh__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Usage_Charge_Threshold_kWh__c</fullName>
    <description>How many kWh does a customer need to use to avoid the Minimum Usage Charge?</description>
    <inlineHelpText>How many kWh does a customer need to use to avoid the Minimum Usage Charge?</inlineHelpText>
    <label>Minimum Usage Charge Threshold (kWh)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>