force-app/main/default/objects/Rate__c/fields/Monthly_Base_Charge__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Base_Charge__c</fullName>
    <description>Monthly fixed base customer charge (charged regardless of kWh usage)</description>
    <inlineHelpText>Monthly fixed base customer charge (charged regardless of kWh usage)</inlineHelpText>
    <label>Monthly Base Charge</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>