force-app/main/default/objects/Rate__c/fields/Move_in_Fee__c.field-meta.xml
<CustomField>
    <fullName>Move_in_Fee__c</fullName>
    <description>Standard (not priority) move in fee</description>
    <inlineHelpText>Standard (not priority) move in fee</inlineHelpText>
    <label>Move-in Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>