force-app/main/default/objects/Rate__c/fields/msid__c.field-meta.xml
<CustomField>
    <fullName>msid__c</fullName>
    <label>Market Source ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>