force-app/main/default/objects/Rate__c/fields/non_demand_3500_kWh_rate_cents__c.field-meta.xml
<CustomField>
    <fullName>non_demand_3500_kWh_rate_cents__c</fullName>
    <description>Average pricing in cents based on monthly usage of 3500 kWh non-demand meters. For commercial rate use.</description>
    <inlineHelpText>Average pricing in cents based on monthly usage of 3500 kWh non-demand meters. For commercial rate use.</inlineHelpText>
    <label>3500 kWh rate (cents)</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>