force-app/main/default/objects/Rate__c/fields/Paper_Bill_Request_Fee__c.field-meta.xml
<CustomField>
    <fullName>Paper_Bill_Request_Fee__c</fullName>
    <description>Fee for physical paper bill issuance</description>
    <inlineHelpText>Fee for physical paper bill issuance</inlineHelpText>
    <label>Paper Bill Request Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>