force-app/main/default/objects/Rate__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <description>Which plan is this rate part of?</description>
    <inlineHelpText>Which plan is this rate part of?</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Rates</relationshipLabel>
    <relationshipName>Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>