force-app/main/default/objects/Rate__c/fields/PrdId__c.field-meta.xml
<CustomField>
    <fullName>PrdId__c</fullName>
    <description>for informatica cloud test data generation</description>
    <externalId>true</externalId>
    <inlineHelpText>for informatica cloud test data generation</inlineHelpText>
    <label>PrdId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>