force-app/main/default/objects/Rate__c/fields/Price_Details__c.field-meta.xml
<CustomField>
    <fullName>Price_Details__c</fullName>
    <formula>if (text( Plan__r.Rate_Type__c) != &quot;SmartBill&quot;,

CASE(text( Plan__r.Rate_Type__c ), 
&quot;SmartCap&quot;, Index_reference__r.Name&amp;&quot; + $&quot;&amp; Index_Adder_As_Text_WF__c &amp;&quot; with a cap of $&quot;&amp;Fixed_Rate_As_Text_WF__c, 
&quot;Index&quot;, Index_reference__r.Name &amp;&quot; + $&quot;&amp;Index_Adder_As_Text_WF__c,
&quot;Fixed&quot;, Fixed_Rate_As_Text_WF__c,
&quot;IndexNoSpread&quot;, Index_reference__r.Name &amp;&quot; + $&quot;&amp;Index_Adder_As_Text_WF__c,
&quot;SmartBlended&quot;, Index_reference__r.Name &amp;&quot; + $&quot;&amp;Index_Adder_As_Text_WF__c &amp; &quot;, Fixed @ $&quot;&amp;Fixed_Rate_As_Text_WF__c,
&quot;SmartFixed&quot;, &quot;$&quot;&amp;Fixed_Rate_As_Text_WF__c&amp;&quot; with &quot;&amp;text(Index_Rate_Percentage__c*100)&amp;&quot;% DPA (&quot;&amp;Index_reference__r.Name&amp;&quot; + $&quot;&amp;Index_Adder_As_Text_WF__c&amp;&quot;)&quot; ,
&quot;Blended&quot;, text(Fixed_Rate_Percentage__c*100)&amp;&quot;% Fixed @ $&quot;&amp;Fixed_Rate_As_Text_WF__c&amp; &quot;, &quot;&amp; text(Index_Rate_Percentage__c*100)&amp;&quot;% @ &quot;&amp; Index_reference__r.Name&amp;&quot; + $&quot;&amp;Index_Adder_As_Text_WF__c, &quot;&quot;
) &amp;&quot; per therm&quot;
, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Details</label>
    <type>Text</type>
</CustomField>