force-app/main/default/objects/Rate__c/fields/Pricing_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Valid_From__c</fullName>
    <description>When is this price valid (start date)?</description>
    <inlineHelpText>When is this price valid (start date)?</inlineHelpText>
    <label>Pricing Valid From</label>
    <type>Date</type>
</CustomField>