force-app/main/default/objects/Rate__c/fields/Pricing_Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Valid_Until__c</fullName>
    <description>When is this price valid (end date)?</description>
    <inlineHelpText>When is this price valid (end date)?</inlineHelpText>
    <label>Pricing Valid Until</label>
    <type>Date</type>
</CustomField>